--- a/dashboard/templates/components/footer.html
+++ b/dashboard/templates/components/footer.html
@@ -1,5 +1,5 @@
 <footer class="bg-dark py-2 text-center font-weight-lighter">
     <a href="/" class="text-decoration-none text-white">
-        &copy; 2020 Copyright, DevJunction
+        &copy; 2020 Copyright, Audarya
     </a>
 </footer>
