--- a/dashboard/static/styles.css
+++ b/dashboard/static/styles.css
@@ -1,3 +1,8 @@
+body {
+    background: rgb(131,58,180);
+    background: radial-gradient(circle, rgba(131,58,180,1) 4%, rgba(29,152,253,1) 48%, rgba(252,176,69,1) 80%); 
+}
+
 @media only screen and (min-width: 767px){
     #sideform{
         min-height: 94vh;
